# WorstAssume

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: README.md
tests/: conftest.py  test_attack_graph.py  test_attack_path.py  test_capability.py  test_cross_account.py  test_entity_index.py  test_graph_store.py  test_group_membership.py  test_iam.py  test_identity.py  test_privilege_escalation.py  test_resource_graph.py  test_security_assessment.py  test_store.py
worstassume/: __init__.py  cli.py  session.py
worstassume/core/: attack_chains.py  attack_graph.py  attack_path.py  capability.py  cross_account.py  graph_store.py  iam_actions.py  privilege_escalation.py  resource_graph.py  security_assessment.py
worstassume/db/: engine.py  models.py  store.py
worstassume/modules/: ec2.py  ecs.py  iam.py  identity.py  lambda_.py  s3.py  vpc.py
worstassume/viz/: server.py
worstassume/viz/frontend/: package-lock.json  package.json
worstassume/viz/frontend/src/: App.jsx  api.js  index.css  main.jsx
worstassume/viz/frontend/src/components/: EntityDetailPanel.jsx  EntityPanel.jsx  GraphViewer.jsx  Logo.jsx  NavRail.jsx  Paginator.jsx  ReportModal.jsx  SecurityCards.jsx
worstassume/viz/frontend/src/context/: AppContext.jsx
worstassume/viz/frontend/src/pages/: AssessmentPage.jsx  DashboardPage.jsx  EntitiesPage.jsx  PrivEscPage.jsx
