[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "worstassume"
version = "0.1.0"
description = "Stealth-first AWS IAM enumeration and multi-account graph tool"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.34",
    "botocore>=1.34",
    "click>=8.1",
    "rich>=13.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "networkx>=3.2",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "moto[iam,sts,ec2,s3,lambda,ecs]>=5.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
worst = "worstassume.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["worstassume*"]
